--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -11,19 +11,20 @@
     .left {
         display: flex;
         flex-direction: row;
-        width: 390px;
+        width: 400px;
     }
 
     .right{
         display: flex;
         flex-direction: row;
         align-items: center;
-        width: 390px;
+        width: 400px;
     }
 
     a {
         text-decoration: none;
-        font-family: 'Open Sans';font-size: 12px;
+        font-family: 'Open Sans';
+        font-size: 12px;
         color: white;
         text-transform: uppercase;
         margin: 0 8px;
