added open sans

--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -23,7 +23,8 @@
 
     a {
         text-decoration: none;
-        font-family: 'Open Sans';font-size: 12px;
+        font-family: 'Open Sans';
+        font-size: 12px;
         color: white;
         text-transform: uppercase;
         margin: 0 8px;
