--- a/src/pages/landing-page/landing-page.styles.scss
+++ b/src/pages/landing-page/landing-page.styles.scss
@@ -71,3 +71,25 @@
         transform: skewY(-6deg);
     }
 }
+
+    /* width */
+    ::-webkit-scrollbar {
+        width: 3px;
+    }
+    
+    /* Track */
+    ::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 5px grey; 
+        border-radius: 10px;
+    }
+    
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+        background: grey; 
+        border-radius: 10px;
+    }
+    
+    /* Handle on hover */
+    ::-webkit-scrollbar-thumb:hover {
+        background: grey; 
+    }
