--- a/src/pages/landing-page/landing-page.styles.scss
+++ b/src/pages/landing-page/landing-page.styles.scss
@@ -74,7 +74,7 @@
             z-index: -1;
 
             .octopusLogo {
-                
+                opacity: 0.5;
             }
         }
     }
