--- a/src/pages/LandingPage/LandingPage.scss
+++ b/src/pages/LandingPage/LandingPage.scss
@@ -5,13 +5,12 @@
     flex-direction: column;
 
     .mainPanel {
-        height: 26.5%;
+        height: 23.62%;
         background-color: #212121;
         position: relative;
         width: 100%;
         display: flex;
         flex-direction: column;
-        z-index: -4;
 
         .mainPanelText {
             margin-top: 66px;
@@ -27,7 +26,7 @@
             }
             .mainPanelSubTitle {
                 text-align: center;
-                margin: 0;
+                margin: 0   ;
                 font-size: 21px;
                 line-height: 28px;
                 color: #D1D1D1;
@@ -37,6 +36,7 @@
         .mainPanelButton {
             display: flex;
             flex-direction: column;
+            justify-content: center;
             align-items: center;
 
                 .mainPanelButtonInner {
@@ -65,6 +65,7 @@
                     cursor: pointer;
                     color: #ffff;
                     font-size: 14px;
+                    margin-top: 8px;
                 }
             }
         
@@ -73,9 +74,7 @@
             left: 0;
             right: 0;
             text-align: center;
-            top: 58%;
-            z-index: -1;
-
+            top: 73%;
             .octopusLogo {
                 opacity: 0.5;
             }
@@ -83,19 +82,22 @@
     }
 
     .secondPanel {
-        //height: 241px;
-        height: 9.04%;
+        height: 5.60%;
         background-color: #171717;
         position: relative;
         text-align: center;
         width: 100%;
 
         .secondPanelText {
-
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            
             .secondPanelTitle {
                 margin: 0;
-                padding-top: 3%;
                 color: #ffff;
+                padding-top: 2%;
                 font-size: 49px;
             }   
 
@@ -105,22 +107,6 @@
                 color: #D1D1D1;
                 font-size: 21px;
             }   
-        }
-    }
-
-    .triangleContainer {
-        display: flex;
-        justify-content: center;
-        width: 100%;
-        background-color: #ffff;
-
-        .triangleSvg {
-            width: 100%;
-            height: 100%;
-        }
-
-        .dark {
-            background-color: #171717;
         }
     }
 
@@ -195,6 +181,56 @@
                 }
             }
 
+    }
+
+    .fourthPanel {
+        width: 100%;
+        height: 23.62%;
+        background-color: red;
+        background-image: url("../../assets/LandingPage/work.JPG");
+        background-size: cover;
+        
+        .fourthPanelInnerContainer {      
+            display: flex;
+            flex-direction: column;
+            margin: 3.49% 0 0 5.608%;
+            width: 766px;
+
+            .fourthPanelTitle {
+                color: #ffff;
+                font-size: 400%;
+            }
+
+            .fourthPanelSubTitle {
+                color: #ffff;
+                font-size: 18px;
+                font-weight: 300;
+                line-height: 27px;
+                margin-top: 0.8047%;
+            }
+
+            .fourthPanelButton {
+                display: flex;
+                justify-content: flex-end;
+                margin-top: 4%;
+            }
+        }
+    }
+
+        .triangleContainer {
+            display: flex;
+            justify-content: center;
+            width: 100%;
+            background-color: #ffff;
+
+        .triangleSvg {
+            width: 100%;
+            height: 100%;
+        }
+
+        .dark {
+            background-color: #171717;
+        }
     }
 
 }
