Landing Page alpha

--- a/src/config.scss
+++ b/src/config.scss
@@ -1,6 +1,7 @@
 $primaryColor: #2196F3;
 $primaryColorDark: #0069c0;
 $primaryColorLight: #6ec6ff;
+$primaryColorFilter: rgba(23,105,170,0.75);
 $secondaryColor: #5e35b1;
 $secondaryColorDark: #280680;
 $secondaryColorLight: #9162E4;
