--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,6 +7,7 @@
     padding: 0 16px;
     background-color: #171717;
     min-height: 41px;
+    width: 100%;
 
     .left {
         display: flex;
